# ha-suno

./: .gitignore  .ruff.toml  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  hacs.json  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  codeql.yml  lockfile-update.yml  release.yml  validate.yml
custom_components/suno/: __init__.py  api.py  audio.py  audio_metadata.py  audio_retag.py  audio_stream.py  auth.py  button.py  cache.py  config_flow.py  const.py  coordinator.py  diagnostics.py  download.py  downloaded_library.py  exceptions.py  helpers.py  icons.json  library_refresh.py  manifest.json  media_source.py  models.py  proxy.py  quality_scale.yaml  rate_limit.py  runtime.py  sensor.py  services.yaml  strings.json  sync.py
custom_components/suno/downloaded_library/: __init__.py  audio_adapter.py  cache_adapter.py  contracts.py  cover_art.py  filesystem.py  m3u8.py  metadata.py  paths.py  planning.py  reconciliation.py  source_modes.py  storage.py  video_art.py
custom_components/suno/translations/: en.json
docs/: login.md
tests/: conftest.py  test_api.py  test_audio.py  test_audio_adapter.py  test_audio_metadata.py  test_audio_retag.py  test_audio_stream.py  test_auth.py  test_button.py  test_cache.py  test_cache_adapter.py  test_config_flow.py  test_coordinator.py  test_cover_hash_file.py  test_diagnostics.py  test_download.py  test_downloaded_library.py  test_downloaded_library_multiaccount.py  test_filesystem.py  test_init.py  test_library_refresh.py  test_m3u8.py  test_manifest_entry.py  test_media_multiaccount.py  test_media_source.py  test_models.py  test_paths.py  test_planning.py  test_proxy.py  test_rate_limit.py  test_reconciliation.py  test_runtime_multiaccount.py  test_sensor.py  test_source_modes.py  test_sync.py  test_track_metadata.py  test_video_art.py
