[project]
name = "ha-suno"
version = "6.0.23"
description = "Suno.ai integration for Home Assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14.2"
dependencies = [
    "pathvalidate>=3.3.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 90

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["custom_components/suno/manifest.json:version"]
build_command = "pip install uv && uv lock"
commit_message = "chore(release): {version}"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "perf", "build", "refactor"]
other_allowed_tags = ["chore", "ci", "docs", "style", "test"]

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.changelog]
mode = "init"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GITHUB_TOKEN" }

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true

[tool.uv]
override-dependencies = [
    "PyJWT>=2.12.0",
    "pytest>=9.0.3",
]

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "pytest_homeassistant_custom_component.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["arg-type", "type-arg"]

[dependency-groups]
dev = [
    "ha-ffmpeg>=3.2.2",
    "mypy>=1.15",
    "pytest-homeassistant-custom-component>=0.13.316",
    "ruff>=0.9",
]
